[UPDATE] Grid Layout

--- a/ubicacion.html
+++ b/ubicacion.html
@@ -22,16 +22,19 @@
         .item-1 {
             border: 5px solid #f8bbd0;
             background: #ffeeff;
+            grid-column: 1 / 4;
         }
 
         .item-2 {
             border: 5px solid #e1bee7;
             background: #fff1ff;
+            grid-row: 2 / 4;
         }
 
         .item-3 {
             border: 5px solid #b2ebf2;
             background: #e5ffff;
+            grid-area: 2 / 2 / 4 / 4;
         }
     </style>
 </head>
