--- a/ubicacion.html
+++ b/ubicacion.html
@@ -13,6 +13,10 @@
             grid-template-columns: 150px 150px 150px;
             grid-template-rows: 75px 75px 75px;
             place-content: center;
+            grid-template-areas: 
+            "header header header"
+            "side main main"
+            "side main main";
         }
 
         .item {
@@ -22,19 +26,19 @@
         .item-1 {
             border: 5px solid #f8bbd0;
             background: #ffeeff;
-            grid-column: 1 / 4;
+            grid-area: header;
         }
 
         .item-2 {
             border: 5px solid #e1bee7;
             background: #fff1ff;
-            grid-row: 2 / 4;
+            grid-area: side;
         }
 
         .item-3 {
             border: 5px solid #b2ebf2;
             background: #e5ffff;
-            grid-area: 2 / 2 / 4 / 4;
+            grid-area: main;
         }
     </style>
 </head>
