🍔 [ADD] main project

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Project</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <main class="container">
+        <section class="hero">
+            <div class="text"> 
+                <h2>Check the Best Food</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eos asperiores, quaerat odit soluta molestiae.</p>
+                <button class="btn">Book a Table</button>
+            </div>
+            <div class="img-wrapper">
+                <img
+                    src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                />
+            </div>
+        </section>
+    </main>
 </body>
 </html>
