--- a/index.html
+++ b/index.html
@@ -21,6 +21,36 @@
                 />
             </div>
         </section>
+        <section class="dishes">
+            <h2>Our services</h2>
+            <div class="dishes-grid">
+                <div class="dish dish-1">
+                    <img
+                        src="https://images.pexels.com/photos/1410236/pexels-photo-1410236.jpeg"
+                    />
+                </div>
+                <div class="dish dish-2">
+                    <img
+                        src="https://images.pexels.com/photos/1640772/pexels-photo-1640772.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                    />
+                </div>
+                <div class="dish dish-3">
+                    <img
+                        src="https://images.pexels.com/photos/1279330/pexels-photo-1279330.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                    />
+                </div>
+                <div class="dish dish-4">
+                    <img
+                        src="https://images.pexels.com/photos/1438672/pexels-photo-1438672.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                    />
+                </div>
+                <div class="dish dish-5">
+                    <img
+                        src="https://images.pexels.com/photos/299410/pexels-photo-299410.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                    />
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
